--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
     "name": "elixir/elixir-helper",
     "description": "Component helper",
-    "version": "1.0.0",
     "license": "BSD-3-Clause",
     "keywords": [
         "elixir",
@@ -9,10 +8,89 @@
     ],
     "homepage": "https://github.com/cedtanghe/elixir-helper",
     "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/cedtanghe/elixir-cache"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/cedtanghe/elixir-classloader"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/cedtanghe/elixir-config"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/cedtanghe/elixir-config"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/cedtanghe/elixir-db"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/cedtanghe/elixir-di"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/cedtanghe/elixir-dispatcher"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/cedtanghe/elixir-filter"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/cedtanghe/elixir-form"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/cedtanghe/elixir-helper"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/cedtanghe/elixir-http"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/cedtanghe/elixir-i18n"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/cedtanghe/elixir-kernel"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/cedtanghe/elixir-mail"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/cedtanghe/elixir-routing"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/cedtanghe/elixir-security"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/cedtanghe/elixir-session"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/cedtanghe/elixir-stdlib"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/cedtanghe/elixir-validator"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/cedtanghe/elixir-view"
+        }
     ],
     "require": {
-        "php": ">=5.6",
-        "elixir/elixir-di": "*"
+        "php": ">=5.6"
     },
     "require-dev": {
         "phpunit/PHPUnit": "~4.0"
@@ -28,5 +106,6 @@
         }
     },
     "suggest": {
+        "elixir/elixir-di": "If you use HelperManager"
     }
 }
